--- a/dissertation/report.tex
+++ b/dissertation/report.tex
@@ -117,8 +117,9 @@
 %----------------------------------------------------------------------------------------
 
 \HRule \\[0.4cm]
-% { \huge \bfseries Drone Delivery Simulation\\with SpatialOS}\\[0.4cm] % Title of your document
-{ \huge \bfseries Make Drones Not Do A Crash:\\A SpatialOS Story}\\[0.4cm] % Title of your document
+% { \huge \bfseries Drone Delivery Simulation\\with SpatialOS}\\[0.4cm] % Title
+% { \huge \bfseries Make Drones Not Do A Crash:\\A SpatialOS Story}\\[0.4cm] % Title
+{ \huge \bfseries Make Drones Not Do A Crash:\\A SpatialOS Story}\\[0.4cm] % Title of your
 \HRule \\[0.4cm]
 
 %----------------------------------------------------------------------------------------
